# aops-dist

./: README.md  VERSION  gemini-extension.json
aops-core-gemini/: GEMINI.md  HEURISTICS.md  INSTALLATION.md  gemini-extension.json  pyproject.toml
aops-core-gemini/agents/: critic.md  effectual-planner.md
aops-core-gemini/aops-core-gemini/: AXIOMS.md  INDEX.md
aops-core-gemini/aops-core-gemini/agents/: custodiet.md  prompt-hydrator.md
aops-core-gemini/aops-core-gemini/hooks/: gate_registry.py  router.py
aops-core-gemini/aops-core-gemini/lib/: hook_utils.py  (+2 more)
aops-core-gemini/commands/: work.md
aops-core-gemini/framework/: enforcement-map.md
aops-core-gemini/hooks/: __init__.py  autocommit_state.py  command_intercept.py  fail_fast_watchdog.py  gate_registry.py  gates.py  hooks.json  ntfy_notifier.py  policy_enforcer.py  reflection_check.py  schemas.py  session_end_commit_check.py  unified_logger.py  user_prompt_submit.py
aops-core-gemini/indices/: FILES.md
aops-core-gemini/lib/: __init__.py  axiom_detector.py  event_detector.py  extract_labor.py  file_index.py  paths.py  session_paths.py  session_reader.py  session_state.py  task_model.py  task_sync.py  template_loader.py
aops-core-gemini/mcp_servers/: tasks_server.py
aops-core-gemini/scripts/: audit_framework_health.py  check_skill_line_count.py
aops-core-gemini/workflows/: base-tdd.md  batch-processing.md  constraint-check.md  critic-detailed.md  decompose.md  email-capture.md  email-classify.md  email-reply.md  framework-gate.md  hdr-supervision.md  peer-review.md  simple-question.md
(+704 files in other folders)
