[project]
name = "aops-core"
version = "0.1.2"
description = "Core academicOps framework - skills, agents, and hooks for research workflow automation"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Nicolas Suzor" }
]
keywords = ["academicOps", "research", "framework", "workflow", "mcp"]
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "filelock>=3.13.0",
  "fastmcp>=2.13.1,<3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lib", "hooks", "mcp_servers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
